Even better-looking loading background.

--- a/app/styles/play/level/loading.sass
+++ b/app/styles/play/level/loading.sass
@@ -13,6 +13,7 @@
   background-image: url($url),         linear-gradient(to bottom, $top, $mid $stop, $bot)
   background-repeat: no-repeat
   background-position: top $backgroundPosition
+  background-size: contain
 
 #level-loading-view
   color: blue
