--- a/app/templates/play/level/modal/victory.jade
+++ b/app/templates/play/level/modal/victory.jade
@@ -1,19 +1,16 @@
-// TODO: refactor to be like other modals
+extends /templates/modal/modal_base
 
-.modal-dialog
+block modal-header-content
+  h3
+    span(data-i18n="play_level.victory_title_prefix")
+    span= levelName
+    span(data-i18n="play_level.victory_title_suffix") Complete
 
-  .modal-header
-    button(type='button', data-dismiss="modal", aria-hidden="true").close &times;
-    h3
-      span(data-i18n="play_level.victory_title_prefix")
-      span= levelName
-      span(data-i18n="play_level.victory_title_suffix") Complete
-
-  .modal-body
-    img.victory-banner(src="/images/level/victory.png", alt="")
-    div!= body
+block modal-body-content
+  img.victory-banner(src="/images/level/victory.png", alt="")
+  div!= body
   
-  .modal-footer
+block modal-footer
     if level.get('type') === 'ladder'
       a.btn.btn-primary(href="/play/ladder/#{level.get('slug')}#my-matches", data-dismiss="modal", data-i18n="play_level.victory_go_home") Go Home
     else if hasNextLevel
@@ -45,7 +42,7 @@
       iframe.github-star-button(src="http://ghbtns.com/github-btn.html?user=codecombat&repo=codecombat&type=watch&count=true", allowtransparency="true", frameborder="0", scrolling="0", width="110", height="20")
   
   if showHourOfCodeDoneButton
-    .modal-footer
+    block modal-footer
       h3.pull-left(data-i18n="play_level.victory_hour_of_code_done") Are You Done?
       a(href="http://code.org/api/hour/finish")
         strong(data-i18n="play_level.victory_hour_of_code_done_yes") Yes, I'm finished with my Hour of Code!
