--- a/app/templates/play/level/modal/docs.jade
+++ b/app/templates/play/level/modal/docs.jade
@@ -1,20 +1,18 @@
 extends /templates/modal/modal_base
 
-block modal-header
-  button(type='button', data-dismiss="modal", aria-hidden="true").close &times;
+block modal-header-content
   h3(data-i18n="play_level.guide_title") Guide
 
-block modal-body
-  .modal-body
-    ul.nav.nav-tabs
-      for doc in docs
-        li
-          a(data-target="#docs_tab_#{doc.slug}", data-toggle="tab") #{doc.name}
-    div.tab-content
-      for doc in docs
-        div.tab-pane(id="docs_tab_#{doc.slug}")!= doc.html
+block modal-body-content
+  ul.nav.nav-tabs
+    for doc in docs
+      li
+        a(data-target="#docs_tab_#{doc.slug}", data-toggle="tab") #{doc.name}
+  div.tab-content
+    for doc in docs
+      div.tab-pane(id="docs_tab_#{doc.slug}")!= doc.html
 
-block modal-footer
+block modal-footer-content
   a(href='#', data-dismiss="modal", aria-hidden="true", data-i18n="modal.close").btn.btn-primary Close
   
 
