--- a/app/templates/play/level/modal/editor_config.jade
+++ b/app/templates/play/level/modal/editor_config.jade
@@ -1,33 +1,33 @@
-.modal-dialog
-  .modal-header
-    button(type='button', data-dismiss="modal", aria-hidden="true").close &times;
-    h3(data-i18n="play_level.editor_config_title") Editor Configuration
-  
-  .modal-body
-    .form
-      .form-group.select-group
-        label.control-label(for="tome-key-bindings" data-i18n="play_level.editor_config_keybindings_label") Key Bindings
-        select#tome-key-bindings(name="keyBindings", type="checkbox", checked=multiplayer)
-          option(value="default" selected=(keyBindings === "default") data-i18n="play_level.editor_config_keybindings_default") Default (Ace)
-          option(value="vim" selected=(keyBindings === "vim")) Vim
-          option(value="emacs" selected=(keyBindings === "emacs")) Emacs
-        span.help-block(data-i18n="play_level.editor_config_keybindings_description") Adds additional shortcuts known from the common editors.
-      .form-group.checkbox
-        label(for="tome-invisibles")
-          input#tome-invisibles(name="invisibles", type="checkbox", checked=invisibles)
-          span(data-i18n="play_level.editor_config_invisibles_label") Show Invisibles
-        span.help-block(data-i18n="play_level.editor_config_invisibles_description") Displays invisibles such as spaces or tabs.
-      .form-group.checkbox
-        label(for="tome-indent-guides")
-          input#tome-indent-guides(name="indentGuides", type="checkbox", checked=indentGuides)
-          span(data-i18n="play_level.editor_config_indentguides_label") Show Indent Guides
-        span.help-block(data-i18n="play_level.editor_config_indentguides_description") Displays vertical lines to see indentation better.
-      .form-group.checkbox
-        label(for="tome-behaviors")
-          input#tome-behaviors(name="behaviors", type="checkbox", checked=behaviors)
-          span(data-i18n="play_level.editor_config_behaviors_label") Smart Behaviors
-        span.help-block(data-i18n="play_level.editor_config_behaviors_description") Autocompletes brackets, braces, and quotes.
-      
-  .modal-footer
-    a(href='#', data-dismiss="modal", aria-hidden="true", data-i18n="modal.close").btn.btn-primary Close
+extends /templates/modal/modal_base
+
+block modal-header-content
+  h3(data-i18n="play_level.editor_config_title") Editor Configuration
+
+block modal-body-content
+  .form
+    .form-group.select-group
+      label.control-label(for="tome-key-bindings" data-i18n="play_level.editor_config_keybindings_label") Key Bindings
+      select#tome-key-bindings(name="keyBindings", type="checkbox", checked=multiplayer)
+        option(value="default" selected=(keyBindings === "default") data-i18n="play_level.editor_config_keybindings_default") Default (Ace)
+        option(value="vim" selected=(keyBindings === "vim")) Vim
+        option(value="emacs" selected=(keyBindings === "emacs")) Emacs
+      span.help-block(data-i18n="play_level.editor_config_keybindings_description") Adds additional shortcuts known from the common editors.
+    .form-group.checkbox
+      label(for="tome-invisibles")
+        input#tome-invisibles(name="invisibles", type="checkbox", checked=invisibles)
+        span(data-i18n="play_level.editor_config_invisibles_label") Show Invisibles
+      span.help-block(data-i18n="play_level.editor_config_invisibles_description") Displays invisibles such as spaces or tabs.
+    .form-group.checkbox
+      label(for="tome-indent-guides")
+        input#tome-indent-guides(name="indentGuides", type="checkbox", checked=indentGuides)
+        span(data-i18n="play_level.editor_config_indentguides_label") Show Indent Guides
+      span.help-block(data-i18n="play_level.editor_config_indentguides_description") Displays vertical lines to see indentation better.
+    .form-group.checkbox
+      label(for="tome-behaviors")
+        input#tome-behaviors(name="behaviors", type="checkbox", checked=behaviors)
+        span(data-i18n="play_level.editor_config_behaviors_label") Smart Behaviors
+      span.help-block(data-i18n="play_level.editor_config_behaviors_description") Autocompletes brackets, braces, and quotes.
+    
+block modal-footer-content
+  a(href='#', data-dismiss="modal", aria-hidden="true", data-i18n="modal.close").btn.btn-primary Close
 
