--- a/app/templates/play/level/modal/multiplayer.jade
+++ b/app/templates/play/level/modal/multiplayer.jade
@@ -1,37 +1,36 @@
-// TODO: refactor to be like other modals
-.modal-dialog
-  .modal-header
-    button(type='button', data-dismiss="modal", aria-hidden="true").close &times;
-    h3(data-i18n="play_level.multiplayer_title") Multiplayer Settings
-  
-  .modal-body
-    if !ladderGame
-      .form
-        .form-group.checkbox
-          label(for="multiplayer")
-            input#multiplayer(name="multiplayer", type="checkbox", checked=multiplayer)
-            | Multiplayer
-          span.help-block Enable others to join your game.
-        
-      hr
-    
-      div#link-area
-        p(data-i18n="play_level.multiplayer_link_description") Give this link to anyone to have them join you.
-        
-        textarea.well#multiplayer-join-link(readonly=true)= joinLink
-        
-        p
-          strong(data-i18n="play_level.multiplayer_hint_label") Hint:
-          span(data-i18n="play_level.multiplayer_hint")  Click the link to select all, then press ⌘-C or Ctrl-C to copy the link.
-      
-        p(data-i18n="play_level.multiplayer_coming_soon") More multiplayer features to come!
+extends /templates/modal/modal_base
 
-    if ladderGame
-      if me.get('anonymous')
-        p Sign in or create an account and get your solution on the leaderboard!
-      else
-        a#go-to-leaderboard-button.btn.btn-primary(href="/play/ladder/#{levelSlug}#my-matches") Go to the leaderboard!
-        p You can submit your game to be ranked from the leaderboard page.
+block modal-header-content
+  h3(data-i18n="play_level.multiplayer_title") Multiplayer Settings
+
+block modal-body-content
+  if !ladderGame
+    .form
+      .form-group.checkbox
+        label(for="multiplayer")
+          input#multiplayer(name="multiplayer", type="checkbox", checked=multiplayer)
+          | Multiplayer
+        span.help-block Enable others to join your game.
+      
+    hr
   
-  .modal-footer
-    a(href='#', data-dismiss="modal", aria-hidden="true", data-i18n="modal.close").btn.btn-primary Close
+    div#link-area
+      p(data-i18n="play_level.multiplayer_link_description") Give this link to anyone to have them join you.
+      
+      textarea.well#multiplayer-join-link(readonly=true)= joinLink
+      
+      p
+        strong(data-i18n="play_level.multiplayer_hint_label") Hint:
+        span(data-i18n="play_level.multiplayer_hint")  Click the link to select all, then press ⌘-C or Ctrl-C to copy the link.
+    
+      p(data-i18n="play_level.multiplayer_coming_soon") More multiplayer features to come!
+
+  if ladderGame
+    if me.get('anonymous')
+      p Sign in or create an account and get your solution on the leaderboard!
+    else
+      a#go-to-leaderboard-button.btn.btn-primary(href="/play/ladder/#{levelSlug}#my-matches") Go to the leaderboard!
+      p You can submit your game to be ranked from the leaderboard page.
+
+block modal-footer-content
+  a(href='#', data-dismiss="modal", aria-hidden="true", data-i18n="modal.close").btn.btn-primary Close
