--- a/app/templates/play/level/modal/reload.jade
+++ b/app/templates/play/level/modal/reload.jade
@@ -1,11 +1,14 @@
-.modal-dialog
+extends /templates/modal/modal_base
+
+block modal-header
   .modal-header
     button(type='button', data-dismiss="modal", aria-hidden="true").close &times;
     h3(data-i18n="play_level.reload_title") Reload All Code?
   
-  .modal-body
+block modal-body
     p(data-i18n="play_level.reload_really") Are you sure you want to reload this level back to the beginning?
   
+block modal-footer
   .modal-footer
     a(href='#', data-dismiss="modal", aria-hidden="true", data-i18n="modal.close").btn Close
     a(href='#', data-dismiss="modal", aria-hidden="true", data-i18n="play_level.reload_confirm").btn.btn-primary#restart-level-confirm-button Reload All
