--- a/app/templates/play/level/modal/reload.jade
+++ b/app/templates/play/level/modal/reload.jade
@@ -1,11 +1,12 @@
-.modal-dialog
-  .modal-header
-    button(type='button', data-dismiss="modal", aria-hidden="true").close &times;
-    h3(data-i18n="play_level.reload_title") Reload All Code?
+extends /templates/modal/modal_base
+
+block modal-header-content
+  h3(data-i18n="play_level.reload_title") Reload All Code?
   
-  .modal-body
+block modal-body
+  block modal-body-content
     p(data-i18n="play_level.reload_really") Are you sure you want to reload this level back to the beginning?
   
-  .modal-footer
-    a(href='#', data-dismiss="modal", aria-hidden="true", data-i18n="modal.close").btn Close
-    a(href='#', data-dismiss="modal", aria-hidden="true", data-i18n="play_level.reload_confirm").btn.btn-primary#restart-level-confirm-button Reload All
+block modal-footer-content
+  a(href='#', data-dismiss="modal", aria-hidden="true", data-i18n="modal.close").btn Close
+  a(href='#', data-dismiss="modal", aria-hidden="true", data-i18n="play_level.reload_confirm").btn.btn-primary#restart-level-confirm-button Reload All
