Brawlwood protectAPI on!

--- a/app/templates/play/level/level_loading.jade
+++ b/app/templates/play/level/level_loading.jade
@@ -10,4 +10,4 @@
     .progress.progress-striped.active
       .progress-bar.progress-bar-success
 
-  h4 Tip: you can shift+click a position on the map to insert it into the spell editor.
+  h4= tip
