--- a/app/templates/home.jade
+++ b/app/templates/home.jade
@@ -29,9 +29,7 @@ block content
         img(src="/images/pages/home/campaign_notext.jpg").img-rounded
         h3(data-i18n="home.campaign") Campaign
         h4(data-i18n="home.for-beginners") For Beginners
-      .play-button
-        img(src="/images/pages/home/button.png")
-        div(data-i18n="home.play") Play
+      .play-text(data-i18n="home.play") Play
 
   a#multiplayer(href="/play/ladder/dungeon-arena")
     div.game-mode-wrapper
@@ -41,8 +39,6 @@ block content
         img(src="/images/pages/home/multiplayer_notext.jpg").img-rounded
         h3(data-i18n="home.multiplayer") Multiplayer
         h4(data-i18n="home.for-developers") For Developers
-      .play-button
-        img(src="/images/pages/home/button.png")
-        div(data-i18n="home.play") Play
+      .play-text(data-i18n="home.play") Play
 
   .clearfix
