Tweaked the video on the home page.

--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -3,10 +3,11 @@
 
 #home-view
   
-  h1, h2
+  h1
     text-align: center
+    margin-top: 0
     
-  #trailer-wrapper object
+  #trailer-wrapper iframe
     display: block
     margin: 0 auto
 
