--- a/app/templates/home.jade
+++ b/app/templates/home.jade
@@ -5,7 +5,7 @@ block content
   h1#site-slogan(data-i18n="home.slogan") Learn to Code JavaScript by Playing a Game
 
   #trailer-wrapper
-    <object width="640" height="360"><param name="movie" value="//www.youtube.com/v/1zjaA13k-dA?hl=en_US&amp;version=3&amp;rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="//www.youtube.com/v/1zjaA13k-dA?hl=en_US&amp;version=3&amp;rel=0" type="application/x-shockwave-flash" width="640" height="360" allowscriptaccess="always" allowfullscreen="true"></embed></object>
+    <iframe width="949" height="534" src="//www.youtube.com/embed/1zjaA13k-dA?rel=0&controls=0&modestbranding=1&showinfo=0&iv_load_policy=3" frameborder="0" allowfullscreen></iframe>
   
   hr
 
