Work on /multiplayer modal.

--- a/app/styles/bootstrap/_variables.scss
+++ b/app/styles/bootstrap/_variables.scss
@@ -472,7 +472,7 @@ $modal-content-bg:                             none !default;
 $modal-content-border-color:                   transparent !default;
 $modal-content-fallback-border-color:          transparent !default;
 
-$modal-backdrop-bg:           transparent !default;
+$modal-backdrop-bg:           black !default;
 $modal-header-border-color:   transparent !default;
 $modal-footer-border-color:   $modal-header-border-color !default;
 
