--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -52,3 +52,15 @@
       filter: brightness(1.1)
       -webkit-filter: brightness(1.1)
   
+#multiplayer-launch-modal
+  .modal-dialog
+    width: 700px
+
+  .modal-header
+    text-align: center
+
+  .modal-body
+    padding-bottom: 0px
+ 
+  .modal-footer
+    padding-top: 0px
