Added i18n for multiplayer launch modal.

--- a/app/templates/home.jade
+++ b/app/templates/home.jade
@@ -28,7 +28,7 @@ block content
       else
         img(src="/images/pages/home/campaign_notext.jpg").img-rounded
         h3(data-i18n="home.campaign") Campaign
-        h4(data-i18n="home.for-beginners") For Beginners
+        h4(data-i18n="home.for_beginners") For Beginners
       .play-text(data-i18n="home.play") Play
 
   a#multiplayer(href="/play/ladder/dungeon-arena")
@@ -38,7 +38,7 @@ block content
       else
         img(src="/images/pages/home/multiplayer_notext.jpg").img-rounded
         h3(data-i18n="home.multiplayer") Multiplayer
-        h4(data-i18n="home.for-developers") For Developers
+        h4(data-i18n="home.for_developers") For Developers
       .play-text(data-i18n="home.play") Play
 
   .clearfix
