Improved next game routing and speed. Hid that catastrophically dangerous reset all games button.

--- a/app/templates/play/ladder.jade
+++ b/app/templates/play/ladder.jade
@@ -44,6 +44,6 @@ block content
           span(data-i18n="ladder.simulation_explanation") By simulating games you can get your game ranked faster!
       p
         button(data-i18n="ladder.simulate_games").btn.btn-warning.btn-lg.highlight#simulate-button Simulate Games!
-      if me.isAdmin()
+      if false && me.isAdmin()
         p
           button(data-i18n="ladder.simulate_all").btn.btn-danger.btn-lg.highlight#simulate-all-button RESET AND SIMULATE GAMES
