--- a/app/templates/play/level/level_loading.jade
+++ b/app/templates/play/level/level_loading.jade
@@ -10,4 +10,12 @@
     .progress.progress-striped.active
       .progress-bar.progress-bar-success
 
-  h4= tip
+  h4.tip(data-i18n='play_level.tip_insert_positions') You can Shift+Click a position on the map to insert it into the spell editor.
+  h4.tip(data-i18n='play_level.tip_toggle_play') You can toggle play/paused with Ctrl+P.
+  h4.tip(data-i18n='play_level.tip_scrub_shortcut') Press Ctrl+[ and Ctrl+] to rewind and fast-forward.
+  h4.tip(data-i18n='play_level.tip_open_source') CodeCombat is 100% open source!
+  h4.tip(data-i18n='play_level.tip_baby_coders') In the future, even babies will be Archmages.
+  h4.tip(data-i18n='play_level.tip_morale_improves') Loading will continue until morale improves.
+  h4.tip(data-i18n='play_level.tip_beta_launch') CodeCombat launched its beta in October, 2013.
+  h4.tip(data-i18n='play_level.tip_js_beginning') JavaScript is just the beginning.
+  h4.tip(data-i18n='play_level.tip_all_species') We believe in equal opportunities to learn programming for all species.
