Added a few more tips.

--- a/app/templates/play/level/level_loading.jade
+++ b/app/templates/play/level/level_loading.jade
@@ -19,3 +19,9 @@
   h4.tip(data-i18n='play_level.tip_beta_launch') CodeCombat launched its beta in October, 2013.
   h4.tip(data-i18n='play_level.tip_js_beginning') JavaScript is just the beginning.
   h4.tip(data-i18n='play_level.tip_all_species') We believe in equal opportunities to learn programming for all species.
+  h4.tip(data-i18n='play_level.tip_reticulating') Reticulating spines.
+  h4.tip(data-i18n='play_level.tip_autocast_setting') You can adjust autocast settings by clicking the gear on the cast button.
+  h4.tip(data-i18n='play_level.tip_guide_exists') Seeking help? Click the guide at the top of the page for useful info.
+  h4.tip
+    span(data-i18n='play_level.tip_harry') Yer a Wizard, 
+    span= me.get('name') || 'Anoner'
