--- a/app/templates/home.jade
+++ b/app/templates/home.jade
@@ -6,6 +6,7 @@ block content
 
   #trailer-wrapper
     <iframe width="949" height="534" src="//www.youtube.com/embed/1zjaA13k-dA?rel=0&controls=0&modestbranding=1&showinfo=0&iv_load_policy=3" frameborder="0" allowfullscreen></iframe>
+    img(src="/images/pages/home/video_border.png")
   
   hr
 
