More tweaks to the video.

--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -9,14 +9,17 @@
     
   #trailer-wrapper
     position: relative
+    margin: 0 auto 40px
+    width: 950px
     iframe
       display: block
       margin: 0 auto
+      position: relative
+      top: 8px
     img
       position: absolute
-      left: 10px
-      width: 976px
-      top: -7px
+      left: 0
+      top: 0
       pointer-events: none
 
   .game-mode-wrapper
@@ -57,8 +60,9 @@
     &:hover div
       color: lighten($yellow, 20%)
     &:hover img
-      filter: brightness(1.1)
-      -webkit-filter: brightness(1.1)
+      filter: brightness(1.2)
+      -webkit-filter: brightness(1.2)
+      box-shadow: 0 0 5px black
   
 #multiplayer-launch-modal
   .modal-dialog
