Embedded new video in multiplayer launch modal.

--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -76,3 +76,19 @@
  
   .modal-footer
     padding-top: 0px
+
+  .multiplayer-launch-wrapper
+    position: relative
+    margin: 0 auto 30px
+    iframe
+      display: block
+      margin: 0 auto
+      position: relative
+      top: 8px
+    img
+      position: absolute
+      left: -7px
+      top: -3px
+      width: 660px
+      height: 382px
+      pointer-events: none
