--- a/app/templates/kinds/search.jade
+++ b/app/templates/kinds/search.jade
@@ -15,6 +15,8 @@ block content
   hr
   div.results
     table
+
+  // TODO: make this into a ModalView subview
   div.modal.fade#new-model-modal
     .modal-dialog
       .modal-content
