--- a/app/templates/contribute/diplomat.jade
+++ b/app/templates/contribute/diplomat.jade
@@ -82,7 +82,7 @@ block content
           li Japanese - g1itch, kengos
           li Chinese - Adam23, spacepope
           li Polish - Anon, Kacper Ciepielewski
-          li Danish - Einar Rasmussen, sorsjen, Anon
+          li Danish - Einar Rasmussen, sorsjen, Randi Hillerøe, Anon
           li Slovak - Anon
           li Persian - Reza Habibi (Rehb)
           li Czech - vanous
