Fixed issue with video on multiplayer page modal

--- a/app/templates/multiplayer_launch_modal.jade
+++ b/app/templates/multiplayer_launch_modal.jade
@@ -7,7 +7,7 @@ block modal-header-content
 block modal-body-content
 
   .multiplayer-launch-wrapper
-    <iframe width="640" height="360" src="//www.youtube.com/embed/wfc0U74LFCk?rel=0&controls=0&modestbranding=1&showinfo=0&iv_load_policy=3&vq=hd720" frameborder="0" allowfullscreen></iframe>
+    <iframe id="multiplayer-video" width="640" height="360" src="//www.youtube.com/embed/wfc0U74LFCk?&rel=0&controls=0&modestbranding=1&showinfo=0&iv_load_policy=3&vq=hd720" frameborder="0" allowfullscreen></iframe>
     img(src="/images/pages/home/video_border.png")
 
   h3(data-i18n="multiplayer_launch.to_battle") To Battle, Developers!
