--- a/app/templates/contribute/diplomat.jade
+++ b/app/templates/contribute/diplomat.jade
@@ -68,7 +68,7 @@ block content
           | Our Translating Diplomats:
         ul.diplomats
           li Turkish - Nazım Gediz Aydındoğmuş, cobaimelan, wakeup
-          li Brazilian Portuguese - Gutenberg Barros, Kieizroe, Matthew Burt, brunoporto
+          li Brazilian Portuguese - Gutenberg Barros, Kieizroe, Matthew Burt, brunoporto, cassiocardoso
           li Portugal Portuguese - Matthew Burt, ReiDuKuduro
           li German - Dirk, faabsen, HiroP0, Anon, bkimminich
           li Thai - Kamolchanok Jittrepit
