Fix for #272 bug.

--- a/app/styles/editor/level/thangs_tab.sass
+++ b/app/styles/editor/level/thangs_tab.sass
@@ -75,13 +75,14 @@
     right: 0
     top: 0
     bottom: 0
-    
+
     #thangs-list
-      position: absolute
+      position: relative
       right: 0
-      top: 40px
+      top: 0
       bottom: 0
       overflow: scroll
+      height: 100%
 
     h3
       margin: 0 -20px 0 0
