--- a/app/templates/editor/level/thangs_tab.jade
+++ b/app/templates/editor/level/thangs_tab.jade
@@ -22,7 +22,8 @@
     #canvas-top-gradient.gradient
 
 .add-thangs-palette.thangs-column
-  h3(data-i18n="editor.level_tab_thangs_add") Add Thangs
+  #thangs-header
+    h3(data-i18n="editor.level_tab_thangs_add") Add Thangs
   #thangs-list
     for group in groups
       h4= group.name
