Wrapped up locale files

--- a/app/templates/play/ladder.jade
+++ b/app/templates/play/ladder.jade
@@ -21,7 +21,7 @@ block content
       for team in teams
         div.column.col-md-4
           a(style="background-color: #{team.primaryColor}", data-team=team.id).play-button.btn.btn-danger.btn-block.btn-lg
-            span(data-i18n="ladder.play_as") Play As
+            span(data-i18n="play.play_as") Play As
             span= team.name
       div.column.col-md-2
     
