--- a/app/templates/about.jade
+++ b/app/templates/about.jade
@@ -160,6 +160,9 @@ block content
             h3 Glen De Cauwsemaecker
     
             p(data-i18n="about.glen_description")
-              | Glen, describe thyself!
+              | Programmer and passionate game developer,
+              | with the motivation to make this world a btter place,
+              | by developing things that mather. The word impossible can't
+              | be found in his dictionary. Learnings new skills is his joy!
 
 
