Applied proofread of Julian.

--- a/app/templates/about.jade
+++ b/app/templates/about.jade
@@ -161,8 +161,8 @@ block content
     
             p(data-i18n="about.glen_description")
               | Programmer and passionate game developer,
-              | with the motivation to make this world a btter place,
+              | with the motivation to make this world a better place,
               | by developing things that mather. The word impossible can't
-              | be found in his dictionary. Learnings new skills is his joy!
+              | be found in his dictionary. Learning new skills is his joy!
 
 
