--- a/app/styles/editor/components/main.sass
+++ b/app/styles/editor/components/main.sass
@@ -17,10 +17,11 @@
   #extant-components-column
     left: 0
     width: 20%
+    top: 13%
     
     .treema
       position: absolute
-      top: 70px
+      top: 80px
       left: 0
       right: 10px
       bottom: 0
