--- a/app/styles/editor/components/main.sass
+++ b/app/styles/editor/components/main.sass
@@ -7,7 +7,7 @@
   
   .column
     position: absolute
-    top: 0
+    top: 15%
     bottom: 0
     padding: 5px
     box-sizing: border-box
@@ -18,24 +18,27 @@
     left: 0
     width: 20%
     top: 13%
+    position: absolute
     
     .treema
       position: absolute
       top: 80px
-      left: 0
+      left: 2px
       right: 10px
       bottom: 0
       overflow: scroll
         
   #add-component-column
-    right: 0
+    right: 2px
     width: 20%
+    top: 13%
+    position: absolute
 
     .treema
       position: absolute
-      top: 70px
+      top: 80px
       left: 10px
-      right: 0px
+      right: 0
       bottom: 0
       overflow: scroll
         
