Select dependencies when nodes in ExtantComponentTreema is selected.

--- a/app/styles/editor/components/main.sass
+++ b/app/styles/editor/components/main.sass
@@ -14,6 +14,9 @@
     h3
       margin: 5px 0
 
+  .treema-dependent > .treema-row 
+    background-color: #FFC671
+
   #extant-components-column
     left: 0
     width: 20%
@@ -37,10 +40,9 @@
       right: 0px
       bottom: 0
       overflow: scroll
-        
+
   #component-config-column-view
     border-left: 1px solid black
     border-right: 1px solid black
     right: 20%
     left: 20%
-    
