Set up a trimmed down leaderboard showing just top players and your rank.

--- a/app/styles/play/ladder.sass
+++ b/app/styles/play/ladder.sass
@@ -5,8 +5,12 @@
   .tab-pane
     margin-top: 10px
   
+  .rank-cell, .fight-cell
+    text-align: center
+    
   .score-cell
     width: 50px
+    text-align: center
     
   .play-button
     margin-bottom: 10px
@@ -21,6 +25,12 @@
     text-overflow: ellipsis
     white-space: nowrap
     overflow: hidden
+    
+  .ellipsis-row
+    text-align: center
+    
+  td
+    padding: 1px 2px
     
   tr.stale
     opacity: 0.5
