--- a/app/templates/play/ladder/ladder_tab.jade
+++ b/app/templates/play/ladder/ladder_tab.jade
@@ -3,23 +3,39 @@ div#columns.row
     div.column.col-md-6
       table.table.table-bordered.table-condensed.table-hover
         tr
-          th(colspan=4, style="color: #{team.primaryColor}")
+          th
+          th(colspan=3, style="color: #{team.primaryColor}")
             span= team.name
             span  
             span(data-i18n="ladder.leaderboard") Leaderboard
         tr
-          th(data-i18n="general.rank") Rank
+          th
           th(data-i18n="general.score") Score
           th(data-i18n="general.name").name-col-cell Name
           th
 
-        for session, rank in team.leaderboard.topPlayers.models
+        - var topSessions = team.leaderboard.topPlayers.models;
+        - var inTheTop = team.leaderboard.inTopSessions();
+        - if(!inTheTop) topSessions = topSessions.slice(0, 10);
+        for session, rank in topSessions
           - var myRow = session.get('creator') == me.id
           tr(class=myRow ? "success" : "")
             td.rank-cell= rank + 1
             td.score-cell= Math.round(session.get('totalScore') * 100)
             td.name-col-cell= session.get('creatorName') || "Anonymous"
-            td
+            td.fight-cell
               a(href="/play/level/#{level.get('slug') || level.id}/?team=#{team.otherTeam}&opponent=#{session.id}")
-                span(data-i18n="ladder.battle_as") Battle as
-                | #{team.otherTeam}!
+                span(data-i18n="ladder.fight") Fight!
+                
+        if !inTheTop
+          tr(class="active")
+            td(colspan=4).ellipsis-row ...
+          for session in team.leaderboard.nearbySessions()
+            - var myRow = session.get('creator') == me.id
+            tr(class=myRow ? "success" : "")
+              td.rank-cell= session.rank
+              td.score-cell= Math.round(session.get('totalScore') * 100)
+              td.name-col-cell= session.get('creatorName') || "Anonymous"
+              td.fight-cell
+                a(href="/play/level/#{level.get('slug') || level.id}/?team=#{team.otherTeam}&opponent=#{session.id}")
+                  span(data-i18n="ladder.fight") Fight!
