A couple ladder tweaks.

--- a/app/templates/play/ladder.jade
+++ b/app/templates/play/ladder.jade
@@ -54,6 +54,6 @@ block content
         span#simulated-by-you= me.get('simulatedBy') || 0
 
       p.simulation-count
-        span(data-i18n="ladder.games_simulated_by") Games simulated for you:
+        span(data-i18n="ladder.games_simulated_for") Games simulated for you:
         |  
         span#simulated-for-you= me.get('simulatedFor') || 0
