Thang editor: components tab finally looks good and does not overlay other tabs

--- a/app/styles/editor/components/main.sass
+++ b/app/styles/editor/components/main.sass
@@ -1,13 +1,13 @@
 #thang-components-edit-view
   position: absolute
-  top: 100px
+  top: 40px
   bottom: 0
   left: 0
   right: 0
   
   .column
     position: absolute
-    top: 70px
+    top: 0 
     bottom: 0
     padding: 5px
     box-sizing: border-box
@@ -32,7 +32,7 @@
 
     .treema
       position: absolute
-      top: 80px
+      top: 70px
       left: 10px
       right: 0px
       bottom: 0
