Select dependents when a extant component is selected.

--- a/app/styles/editor/components/main.sass
+++ b/app/styles/editor/components/main.sass
@@ -14,6 +14,9 @@
     h3
       margin: 5px 0
 
+  .treema-dependent > .treema-row 
+    background-color: #FFC671
+
   #extant-components-column
     left: 0
     width: 20%
