--- a/app/templates/cla.jade
+++ b/app/templates/cla.jade
@@ -94,8 +94,7 @@
         label(for="github-username") Github Username
         input(name="github-username", type="text")#github-username.form-control
         span.help-block Please include if contributing to the 
-          p(href="github.com/codecombat/codecombat") Github repository
-           | .
+          <a href="https://github.com/codecombat/codecombat">Github repository</a>.
     p
       | Please press I AGREE below to indicate your agreement.
     button.btn#agreement-button I AGREE
