Adding CLAs view.

--- a/app/templates/admin.jade
+++ b/app/templates/admin.jade
@@ -29,3 +29,5 @@ block content
   ul
     li
       a(href="/admin/base", data-i18n="admin.av_other_debug_base_url") Base (for debugging base.jade)
+    li
+      a(href="/admin/clas", data-i18n="admin.clas") CLAs
