Improved page title. Fixed Twitter card image.

--- a/app/templates/base.jade
+++ b/app/templates/base.jade
@@ -5,7 +5,7 @@ body
       .content.clearfix
         .navbar-header
           a.navbar-brand(href='/')
-            img(src="/images/pages/base/logo.png", title="CodeCombat", alt="CodeCombat")
+            img(src="/images/pages/base/logo.png", title="CodeCombat - Learn how to code by playing a game", alt="CodeCombat")
 
         select.language-dropdown
 
