No email addresses for non-admins on CLA submissions.

--- a/app/templates/admin/clas.jade
+++ b/app/templates/admin/clas.jade
@@ -9,7 +9,8 @@ block content
       each cla in clas
         tr
           td #{cla.name}
-          td #{cla.email}
+          if me.isAdmin()
+            td #{cla.email}
           td #{cla.githubUsername}
           td #{cla.created}
  
