--- a/app/styles/play/ladder.sass
+++ b/app/styles/play/ladder.sass
@@ -29,6 +29,34 @@
   .ellipsis-row
     text-align: center
     
+  // friend column
+
+  .friends-header
+    margin-top: 0
+    margin-bottom: 5px
+
+  .connect-buttons
+    margin-bottom: 10px
+    .btn
+      margin-left: 5px
+  
+  .friend-entry img
+    float: left
+    margin-right: 10px
+    
+  .friend-entry
+    margin-bottom: 15px
+    
+  .connect-facebook
+    background-color: #4c66a4 !important
+    background-image: none
+    color: white
+    
+  .connect-google-plus
+    background-color: #CC3234 !important
+    background-image: none
+    color: white
+    
   td
     padding: 1px 2px
     
