--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -8,6 +8,9 @@ html, body
   // For level loading view wings
   overflow-x: hidden
 
+body
+  overflow: hidden
+
 // https://github.com/twbs/bootstrap/issues/9237 -- need a version that's not !important
 .secret
   display: none
@@ -48,7 +51,6 @@ h1 h2 h3 h4
   margin: 0 auto
 
 .footer
-  height: 75px
   border-top: 1px solid black
   background-color: #2f261d
   p
