Added myself to the signature.

--- a/app/templates/contribute/contribute.jade
+++ b/app/templates/contribute/contribute.jade
@@ -34,7 +34,7 @@ block content
         p(data-i18n="contribute.introduction_desc_ending")
           | We hope you'll join our party!
         p(data-i18n="contribute.introduction_desc_signature").signature
-          | - Nick, George, Scott, Michael, and Jeremy
+          | - Nick, George, Scott, Michael, Jeremy and Glen
         hr
 
       if me.attributes.anonymous
