--- a/app/styles/play/ladder.sass
+++ b/app/styles/play/ladder.sass
@@ -36,9 +36,9 @@
     margin-bottom: 5px
 
   .connect-buttons
-    margin-bottom: 10px
+    margin-bottom: 15px
     .btn
-      margin-left: 5px
+      margin-right: 5px
   
   .friend-entry img
     float: left
