--- a/app/styles/play/level.sass
+++ b/app/styles/play/level.sass
@@ -1,6 +1,10 @@
 @import "app/styles/bootstrap/mixins"
 @import "app/styles/mixins"
 
+#level-loading-view
+  overflow-x: hidden
+
+
 #level-view
   margin: 0 auto
   @include user-select(none)
