Show error message when editor fails to initiate.

--- a/app/templates/editor/article/edit.jade
+++ b/app/templates/editor/article/edit.jade
@@ -18,10 +18,12 @@ block content
   h3(data-i18n="article.edit_article_title") Edit Article
     span
      |: "#{article.attributes.name}"
-  
+
   #article-treema
     
   #article-view
   
   hr
+
+  div#error-view
 
