Added funny tip

--- a/app/templates/play/level/level_loading.jade
+++ b/app/templates/play/level/level_loading.jade
@@ -22,6 +22,7 @@
     strong.tip.rare(data-i18n='play_level.tip_morale_improves') Loading will continue until morale improves.
     strong.tip.rare(data-i18n='play_level.tip_all_species') We believe in equal opportunities to learn programming for all species.
     strong.tip.rare(data-i18n='play_level.tip_reticulating') Reticulating spines.
+    strong.tip.rare(data-i18n='play_level.tip_great_responsibility') With great coding skills comes great debug responsibility.
     strong.tip.rare
       span(data-i18n='play_level.tip_harry') Yer a Wizard, 
       span= me.get('name') || 'Anoner'
