--- a/app/templates/editor/level/add_thangs.jade
+++ b/app/templates/editor/level/add_thangs.jade
@@ -1,5 +1,5 @@
 h3(data-i18n="editor.level_tab_thangs_add") Add Thangs
-input(type="text", id="thang-search")
+input(type="search", id="thang-search")
 #thangs-list
   for group in groups
     h4= group.name
