--- a/app/templates/play/level/level_loading.jade
+++ b/app/templates/play/level/level_loading.jade
@@ -18,10 +18,11 @@
     strong.tip(data-i18n='play_level.tip_js_beginning') JavaScript is just the beginning.
     strong.tip(data-i18n='play_level.tip_autocast_setting') Adjust autocast settings by clicking the gear on the cast button.
     strong.tip(data-i18n='play_level.tip_think_solution') Think of the solution, not the problem.
-    strong.tip(data-i18n='play_level.tip_theory_practice') In theory, theory and practice are the same. In practice, they’re not.
-    strong.tip(data-i18n='play_level.tip_error_free') There are two ways to write error-free programs; only the third one works.
-    strong.tip(data-i18n='play_level.tip_debugging_program') If debugging is the process of removing bugs, then programming must be the process of putting them in.
+    strong.tip(data-i18n='play_level.tip_theory_practice') In theory there is no difference between theory and practice; in practice there is. - Yogi Berra
+    strong.tip(data-i18n='play_level.tip_error_free') There are two ways to write error-free programs; only the third one works. - Alan Perlis
+    strong.tip(data-i18n='play_level.tip_debugging_program') If debugging is the process of removing bugs, then programming must be the process of putting them in. - Edsger W. Dijkstra
     strong.tip(data-i18n='play_level.tip_forums') Head over to the forums and tell us what you think!
+    strong.tip(data-i18n='play_level.tip_impossible') It always seems impossible until it's done. - Nelson Mandela
 
     strong.tip.rare(data-i18n='play_level.tip_baby_coders') In the future, even babies will be Archmages.
     strong.tip.rare(data-i18n='play_level.tip_morale_improves') Loading will continue until morale improves.
@@ -29,9 +30,9 @@
     strong.tip.rare(data-i18n='play_level.tip_reticulating') Reticulating spines.
     strong.tip.rare(data-i18n='play_level.tip_munchkin') If you don't eat your vegetables, a munchkin will come after you while you're asleep.
     strong.tip.rare(data-i18n='play_level.tip_binary') There are only 10 types of people in the world: Those who understand binary, and those who don't.
-    strong.tip.rare(data-i18n='play_level.tip_commitment_yoda') A programmer must have the deepest commitment, the most serious mind.
-    strong.tip.rare(data-i18n='play_level.tip_no_try') Do. Or do not. There is no try.
-    strong.tip.rare(data-i18n='play_level.tip_patience') Patience you must have,young Padawan.
+    strong.tip.rare(data-i18n='play_level.tip_commitment_yoda') A programmer must have the deepest commitment, the most serious mind. ~ Yoda
+    strong.tip.rare(data-i18n='play_level.tip_no_try') Do. Or do not. There is no try. - Yoda
+    strong.tip.rare(data-i18n='play_level.tip_patience') Patience you must have, young Padawan. - Yoda
     strong.tip.rare(data-i18n='play_level.tip_documented_bug') A documented bug is not a bug; it is a feature.
     strong.tip.rare
       span(data-i18n='play_level.tip_harry') Yer a Wizard, 
