--- a/app/templates/multiplayer_launch_modal.jade
+++ b/app/templates/multiplayer_launch_modal.jade
@@ -2,7 +2,7 @@ extends /templates/modal/modal_base
 
 block modal-header-content
   h1(data-i18n="multiplayer_launch.introducing_dungeon_arena") Introducing Dungeon Arena
-  em(data-i18n="multiplayer_launch.new_way") March 17, 2014: The new way to compete with code.
+  em(data-i18n="multiplayer_launch.new_way") The new way to compete with code.
 
 block modal-body-content
 
