--- a/app/templates/editor/level/thangs_tab.jade
+++ b/app/templates/editor/level/thangs_tab.jade
@@ -17,6 +17,11 @@
 .world-container.thangs-column
   h3(data-i18n="editor.level_tab_thangs_conditions") Starting Conditions
   #canvas-wrapper
+    ul.dropdown-menu#contextmenu
+      li#delete
+        a Delete
+      li#duplicate
+        a Duplicate
     canvas(width=1848, height=1178)#surface
     #canvas-left-gradient.gradient
     #canvas-top-gradient.gradient
